tests/PhiCore/compile_failure/src/core/address_of/rvalue.fail.cpp
#include <phi/core/address_of.hpp>

int main()
{
    const int* p = phi::address_of<const int>(0);
}
